--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primera pagina</title>
+    <style>
+        *{
+            margin: 0;
+        }
+        body{
+            background-color: rgb(239, 189, 172);
+        }
+        a{
+            text-decoration: none;
+            background-color: aquamarine;
+            padding: 10px 20px;
+            color: rgb(0, 0, 0);
+        }
+    </style>
 </head>
 <body>
 <table>
     <!--header-->
     <tr>
         <td>
-            
+            <img src="https://media.jobs.ch/images/cc50b5e0-890e-4749-93b6-eb232f7794b5/banner_image-2386x796.png?dimensions=1200x400&transform=crop" alt="banner">
+
         </td>
     </tr>
      <!--menu-->
